Update docker images to use alpine as a base

--- a/docker/Dockerfile.common
+++ b/docker/Dockerfile.common
@@ -1,16 +1,18 @@
 LABEL build_version="Premiumizearr version:- ${VERSION} Build-date:- ${BUILD_DATE}"
 LABEL maintainer="JackDallas"
 
-COPY docker/root/ /
-
 EXPOSE 8182
 
-RUN mkdir /data
-RUN mkdir /unzip
-RUN mkdir /downloads
-RUN mkdir /transfers
-RUN mkdir /blackhole
-RUN mkdir -p /opt/app/
+WORKDIR /
+
+RUN ls
+
+RUN mkdir /data && \
+    mkdir /unzip && \
+    mkdir /downloads && \
+    mkdir /transfers && \
+    mkdir /blackhole && \
+    mkdir -p /opt/app/
 
 WORKDIR /opt/app/
 
@@ -20,4 +22,4 @@ ENV PREMIUMIZEARR_LOGGING_DIR_PATH=/data
 COPY premiumizearrd /opt/app/
 COPY build/static /opt/app/static
 
-ENTRYPOINT ["/init"]
+ENTRYPOINT ["/opt/app/premiumizearrd"]
