--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,10 +51,14 @@ jobs:
         DOCKER_BUILDKIT: 1 
         COMPOSE_DOCKER_CLI_BUILD: 1
       
+    - name: 'Get Previous tag'
+      id: previoustag
+      uses: "WyriHaximus/github-action-get-previous-tag@v1"
+
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
       with:
-        image-ref: 'ghcr.io/jackdallas/premiumizearr:${{ github.sha }}-amd64'
+        image-ref: 'ghcr.io/jackdallas/premiumizearr:${{ steps.previoustag.outputs.tag }}-amd64'
         format: 'template'
         template: '@/contrib/sarif.tpl'
         output: 'trivy-results.sarif'
@@ -64,15 +68,15 @@ jobs:
       uses: github/codeql-action/upload-sarif@v2
       with:
         sarif_file: 'trivy-results.sarif'
-
+  
+    # Release build
     - uses: docker/login-action@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-        
-# Release build
+
     - name: Release
       uses: goreleaser/goreleaser-action@v2
       if: startsWith(github.ref, 'refs/tags/') && !contains(github.ref, '-rc')
