--- a/config.yaml
+++ b/config.yaml
@@ -1,17 +1,20 @@
 PremiumizemeAPIKey: xxxxxxxxx
 Arrs:
-- Name: ""
+- Name: Sonarr
   URL: http://localhost:8989
   APIKey: xxxxxxxxx
   Type: Sonarr
-- Name: ""
+- Name: Radarr
   URL: http://localhost:7878
   APIKey: xxxxxxxxx
   Type: Radarr
 BlackholeDirectory: ""
+PollBlackholeDirectory: false
+PollBlackholeIntervalMinutes: 10
 DownloadsDirectory: ""
 UnzipDirectory: ""
 bindIP: 0.0.0.0
 bindPort: "8182"
 WebRoot: ""
 SimultaneousDownloads: 5
+ArrHistoryUpdateIntervalSeconds: 20
