--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,13 @@ jobs:
 
     - uses: actions/setup-go@v2
       with:
-        go-version: '1.17'
+        go-version: '1.20'
 
-    - name: go Version
+    - name: Go Version
       run: go version
+
+    - name: Go Vet
+      run: go vet ./...
 
     - name: Docker Version
       run: docker version
@@ -69,7 +72,7 @@ jobs:
       with:
         sarif_file: 'trivy-results.sarif'
   
-    # Release build
+# Release build
     - uses: docker/login-action@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
