--- a/docker/Dockerfile.amd64
+++ b/docker/Dockerfile.amd64
@@ -1,5 +1,5 @@
 # syntax=edrevo/dockerfile-plus
 
-FROM ghcr.io/linuxserver/baseimage-alpine:3.16-f525477c-ls6@sha256:c25011f564093f523b1a793658d19275d9eac5a7f21aa5d00ce6cdff29c2a8c1
+FROM ghcr.io/linuxserver/baseimage-alpine:3.20-2a6ecb14-ls14
 
 INCLUDE+ docker/Dockerfile.common
