--- a/docker/Dockerfile.armv7
+++ b/docker/Dockerfile.armv7
@@ -1,5 +1,5 @@
 # syntax=edrevo/dockerfile-plus
 
-FROM ghcr.io/linuxserver/baseimage-alpine:3.16-f525477c-ls6@sha256:a31127cd9764c95d6137764a1854402d3a33ee085edd139e08726e2fc98d2254
+FROM ghcr.io/linuxserver/baseimage-alpine:3.20-2a6ecb14-ls14
 
 INCLUDE+ docker/Dockerfile.common
