--- a/web/package.json
+++ b/web/package.json
@@ -5,22 +5,17 @@
     "carbon-components-svelte": "^0.86.1",
     "carbon-icons-svelte": "^12.13.0",
     "carbon-preprocess-svelte": "^0.11.7",
-    "copy-webpack-plugin": "^12.0.2",
-    "cross-env": "^7.0.0",
-    "css-loader": "^7.1.2",
-    "esbuild-loader": "^4.2.2",
-    "mini-css-extract-plugin": "^2.9.2",
+    "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "svelte": "^5.2.7",
-    "svelte-loader": "^3.2.4",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "vite": "^6.0.1"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack serve --static public"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "luxon": "^3.5.0"
-  }
+  },
+  "type": "module"
 }
