--- a/docker/Dockerfile.common
+++ b/docker/Dockerfile.common
@@ -17,7 +17,7 @@ WORKDIR /opt/app/
 ENV PREMIUMIZEARR_CONFIG_DIR_PATH=/data
 ENV PREMIUMIZEARR_LOGGING_DIR_PATH=/data
 
-COPY premiumizearrd /opt/app/
+COPY dist/Premiumizearr_linux_amd64_v1/premiumizearrd /opt/app/
 COPY build/static /opt/app/static
 
 ENTRYPOINT ["/init"]
